# BuildIT

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.sh  buildit.cpp  buildit.drawio  environment.hpp.in  flecs-design.tex  model-changes.tex
lib/imgui/: CMakeLists.txt
modules/gui/: CMakeLists.txt
modules/gui/include/bit/: shader.hpp
modules/gui/include/bit/memory/: memory_allocator.hpp
modules/gui/include/bit/pipeline/: build_pipeline.hpp  compute_pipeline_builder.hpp
modules/gui/shaders/: instanced-rect.frag  instanced-rect.vert  reset-culling.comp
modules/gui/src/: bounding_box.hpp  chip_buffer.hpp  module.cpp
modules/gui/src/bit/pipeline/: graphics_pipeline_builder.cpp
modules/network/: CMakeLists.txt  default-config.ini
modules/network/include/buildit/network/: commit_message.hpp  communication.hpp  history.hpp  network.hpp  protocol.hpp
modules/network/src/: module.cpp  network.cpp
modules/plugin/tests/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  shader.cpp
src/app/include/app/vulkan/: circuitboard.hpp  circuitboard_manager.hpp  circuitboard_overlay.hpp  imgui_circuitboard.hpp  indirect_renderer.hpp  memory.hpp  shader.hpp  vulkancontext.h  vulkancontext.hpp
src/app/qml/application/: CMakeLists.txt  main.qml
src/app/shaders/: grid.frag  grid.vert  instanced-rect.frag  instanced-rect.vert  rect-culling.comp  reset-instance-count.comp
src/app/src/: circuitboard.cpp  main.cpp
src/app/src/app/vulkan/: circuitboard.cpp  circuitboard_manager.cpp  imgui_circuitboard.cpp  indirect_renderer.cpp  vulkancontext.cpp
src/controller/: CMakeLists.txt  controller.hpp
src/controller/include/: controller.hpp
src/controller/include/controller/: pinConnector.h
src/controller/include/controller/observers/: observer.hpp
src/controller/include/controller/systems/: connect.hpp
src/controller/src/controller/: pinConnector.cpp
src/controller/src/controller/observers/: observer.cpp
src/controller/src/controller/systems/: connect.cpp  disconnect.cpp  move.cpp  rotate.cpp
src/controller/tests/: CMakeLists.txt  test_controller.cpp
src/ecs/: CMakeLists.txt
src/ecs/include/ecs/: changemixin.hpp  chip_type_registry.hpp  circuitboard.h  collision.hpp  component_registry.hpp  components.hpp  globalentitymixin.hpp  ownershipmixin.hpp  registry_node.hpp  snapshot.hpp
src/ecs/include/ecs/internal/: globalentitymixin.hpp  ownershipmixin.hpp  snapshot.hpp
src/ecs/src/ecs/: chip_type_registry.cpp  chip_type_registry_t.cpp  circuitboard.cpp  collision.cpp  component_registry.cpp  components.cpp  snapshot.cpp
src/ecs/src/ecs/internal/: snapshot.cpp
src/ecs/tests/: CMakeLists.txt  test_model.cpp
src/event/: CMakeLists.txt
src/event/include/event/: ecs_history.hpp  event.hpp  event_t.hpp  eventdispatcher.hpp  eventtarget.hpp  history.hpp
src/event/include/event/listener/: create_chip_event.cpp  create_chip_event.h
src/event/src/event/: ecs_history.cpp  event.cpp  event_t.cpp  eventtarget.cpp  history.cpp
src/event/tests/: CMakeLists.txt  test_events.cpp  test_history.cpp
src/events/: CMakeLists.txt  event.cpp  event.hpp
src/events/include/: event.hpp  events.hpp
src/events/include/events/: event.hpp  eventdispatcher.hpp  history.hpp
src/events/include/events/handler/: eventHandler.hpp  moveEventHandler.hpp
src/events/src/events/handler/: eventHandler.cpp  moveEventHandler.cpp
src/history/: CMakeLists.txt  action.h
src/history/actions/: createVertexAction.h  createWireAction.cpp  createWireAction.h  insertVertexAction.cpp  insertVertexAction.h  moveGateAction.cpp  moveVertexAction.h
src/history/include/history/: basicchangemixin.hpp  event.hpp  eventdispatcher.hpp  eventtarget.hpp  history.hpp  worldhistory.hpp
src/history/src/history/: event.cpp  eventtarget.cpp  history.cpp  worldhistory.cpp
src/history/tests/: CMakeLists.txt  test_history.cpp
src/host/: CMakeLists.txt
src/host/include/host/: chip_type_registry.hpp
src/host/src/: chip_type_registry.cpp
src/model/: CMakeLists.txt  components.hpp  models.h  pins.h
src/model/include/: model.hpp
src/model/include/model/: changemixin.hpp  collision.hpp  components.hpp  globalentitymixin.hpp  historymixin.hpp  network.hpp  pinCache.hpp  pinLookupCache.h  pinRenderCache.hpp  snapshot.hpp
src/model/src/model/: collision.cpp  components.cpp  pinCache.cpp  pinLookupCache.cpp  pinRenderCache.cpp  snapshot.cpp
src/model/storage/: serialization.hpp
src/model/tests/: CMakeLists.txt  test_model.cpp
src/plugin/: CMakeLists.txt
src/plugin/api/: CMakeLists.txt
src/plugin/api-cpp/: CMakeLists.txt
src/plugin/include/plugin/: plugin-api.h  plugin.h  plugin.hpp
src/plugin/loader/: CMakeLists.txt
src/plugin/loader/src/: api.cpp  loader.cpp
src/plugin/plugins/default/: CMakeLists.txt
src/plugin/src/plugin/: plugin.cpp
src/plugin/tests/: CMakeLists.txt  test_plugin.cpp
src/plugins/default/: CMakeLists.txt
src/serialization/: CMakeLists.txt
src/serialization/include/serialization/: serialization.hpp  worldserialization.hpp
src/serialization/src/serialization/: serialization.cpp  worldserialization.cpp
src/simulation/: CMakeLists.txt  Graph.cpp  Graph.h  Node.cpp  Node.h  Simulation.cpp  Simulation.h  gate.cpp  gate.h  graph.cpp  graph.h  node.cpp  node.h  nodeUpdater.cpp  nodeUpdater.h  simulation.cpp  simulation.h  updaters.cpp  updaters.h
src/simulation/include/: simulation.hpp
src/simulation/include/simulation/: graph.hpp  node.hpp  simulation.hpp
src/simulation/src/: node.cpp  simulation.cpp
src/simulation/src/simulation/: graph.cpp  node.cpp  simulation.cpp
src/simulation/tests/: test_simulation.cpp
src/ui/: CMakeLists.txt
src/ui/include/bit/: debug-names.hpp  shader.hpp
src/ui/shaders/: culling.comp  instanced-rect.frag  instanced-rect.vert
src/ui/src/: application.cpp  bounding_box.hpp  chip_buffer.hpp
src/worlds/: CMakeLists.txt
src/worlds/include/: worlds.hpp
src/worlds/include/worlds/: world.hpp  worldRegistry.h
src/worlds/src/worlds/: world.cpp  worldRegistry.cpp
(+614 files in other folders)
